# mtgenv

./: .gitignore  CLAUDE.md  Cargo.toml  PROJECT_STATE.md  WORKLOG.md  package-lock.json
crates/mtg-core/: Cargo.toml
crates/mtg-core/src/: agent.rs  basics.rs  conditions.rs  error.rs  events.rs  ids.rs  lib.rs  mana.rs  priority.rs  replay.rs  rng.rs  sba.rs  session.rs  stack.rs  subtypes.rs  whiteboard.rs
crates/mtg-core/src/cards/: emblems.rs  grant_templates.rs  helpers.rs  mod.rs  tokens.rs
crates/mtg-core/src/cards/aer/: alley_strangler.rs  mod.rs
crates/mtg-core/src/cards/ala/: ad_nauseam.rs  elvish_visionary.rs  mod.rs
crates/mtg-core/src/cards/all/: force_of_will.rs  mod.rs
crates/mtg-core/src/cards/bfz/: bring_to_light.rs  mod.rs
crates/mtg-core/src/cards/blb/: hop_to_it.rs  keen_eyed_curator.rs  mod.rs  repel_calamity.rs  stargaze.rs
crates/mtg-core/src/cards/bro/: awaken_the_woods.rs  brotherhoods_end.rs  bushwhack.rs  mod.rs
crates/mtg-core/src/cards/chk/: glimpse_of_nature.rs  mod.rs
crates/mtg-core/src/cards/cmd/: flusterstorm.rs  mod.rs
crates/mtg-core/src/cards/cmr/: akromas_will.rs  jeskas_will.rs  mod.rs
crates/mtg-core/src/cards/cn2/: mod.rs  subterranean_tremors.rs
crates/mtg-core/src/cards/dft/: locust_spray.rs  lumbering_worldwagon.rs  mod.rs  stock_up.rs
crates/mtg-core/src/cards/dsk/: hushwood_verge.rs  mod.rs
crates/mtg-core/src/cards/eld/: fabled_passage.rs  mod.rs
crates/mtg-core/src/cards/emn/: exultant_cultist.rs  mod.rs
crates/mtg-core/src/cards/eoe/: dyadrine_synthesis_amalgam.rs  icetill_explorer.rs  mightform_harmonizer.rs  mod.rs
crates/mtg-core/src/cards/exo/: culling_the_weak.rs  mod.rs
crates/mtg-core/src/cards/fdn/: bulk_up.rs  mod.rs  mossborn_hydra.rs
crates/mtg-core/src/cards/fin/: mod.rs  sazhs_chocobo.rs
crates/mtg-core/src/cards/frf/: mod.rs  shamanic_revelation.rs
crates/mtg-core/src/cards/hou/: abrade.rs  mod.rs
crates/mtg-core/src/cards/isd/: mod.rs  typhoid_rats.rs
crates/mtg-core/src/cards/ktk/: deflecting_palm.rs  disdainful_stroke.rs  hardened_scales.rs  mod.rs
crates/mtg-core/src/cards/lci/: bitter_triumph.rs  helping_hand.rs  mod.rs
crates/mtg-core/src/cards/lea/: armageddon.rs  berserk.rs  elvish_archers.rs  giant_growth.rs  grizzly_bears.rs  hill_giant.rs  lightning_bolt.rs  llanowar_elves.rs  mod.rs  wall_of_stone.rs
crates/mtg-core/src/cards/ltr/: mod.rs  reprieve.rs
crates/mtg-core/src/cards/m10/: child_of_night.rs  divination.rs  essence_scatter.rs  mod.rs
crates/mtg-core/src/cards/m11/: mod.rs  preordain.rs  pyretic_ritual.rs
crates/mtg-core/src/cards/m12/: gladecover_scout.rs  mod.rs
crates/mtg-core/src/cards/m13/: mod.rs  murder.rs
crates/mtg-core/src/cards/m15/: mod.rs  return_to_the_ranks.rs
crates/mtg-core/src/cards/m20/: mod.rs  veil_of_summer.rs
crates/mtg-core/src/cards/mgb/: king_cheetah.rs  mod.rs
crates/mtg-core/src/cards/mh1/: mod.rs  winds_of_abandon.rs
crates/mtg-core/src/cards/mh2/: mod.rs  prismatic_ending.rs
crates/mtg-core/src/cards/mir/: mod.rs  pacifism.rs
crates/mtg-core/src/cards/misc/: basics.rs  enchantments.rs  mod.rs  planeswalkers.rs  spells.rs  triggers.rs  vanilla.rs
crates/mtg-core/src/cards/mkm/: deduce.rs  escape_tunnel.rs  mod.rs  pick_your_poison.rs
crates/mtg-core/src/cards/mrd/: bonesplitter.rs  mod.rs
crates/mtg-core/src/chars/: mod.rs
crates/mtg-core/src/combat/: mod.rs
crates/mtg-core/src/effects/: ability.rs  action.rs  condition.rs  mod.rs  native.rs  target.rs  value.rs
crates/mtg-core/src/state/: mod.rs  view.rs
crates/mtg-core/src/turn/: mod.rs
crates/mtg-coro-spike/: Cargo.toml
crates/mtg-coro-spike/src/: lib.rs
crates/mtg-gre-server/: .gitignore  Cargo.toml  card-art.json  resolve-card-art.py
crates/mtg-gre-server/src/: cli.rs  custom_decks.rs  driver.rs  embedded_client.html  human.rs  lib.rs  lobby.rs  lobby_client.html  options.rs  protocol.rs  render.rs  server.rs  session.rs
crates/mtg-gre-server/web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/mtg-gre-server/web/src/: main.ts  style.css
crates/mtg-py/: Cargo.toml  pyproject.toml
crates/mtg-py/src/: codec.rs  decision_stats.rs  fleet.rs  game.rs  layout.rs  lib.rs  obs.rs
mtga-bridge/server/: .gitignore  Cargo.toml
mtga-bridge/server/src/: cert.rs  cmds.rs  envelope.rs  frame.rs  frontdoor.rs  http_stub.rs  jwt.rs  lib.rs  logging.rs  main.rs
python/: README.md  ab_shaping.py  attn_train.py  bench_infer.py  bench_throughput.py  benchmark.py  dmc_train.py  export_replays.py  llm_agent.py  pyproject.toml  rate_agent.py  search_agent.py  selfplay_train.py  swine_blocks.py  tb_compare.py  throughput.py  train.py  train_watchdog.sh
python/bench/: throughput_baseline_20260703-153729.json  throughput_fleet-after-optdecode_20260703-173502.json  throughput_fleet-after_20260703-172759.json  throughput_fleet-before_20260703-172337.json  throughput_port-after_20260703-163626.json  throughput_port-before_20260703-162611.json
python/mtgenv_gym/: __init__.py  attn_policy.py  batched_selfplay.py  codec_layout.py  dmc.py  env.py  equivalence.py  fleet_selfplay.py  inference.py  launch_guard.py  league.py  perf.py  policy.py  replays.py  selfplay.py  tb_meta.py  tracked_stats.py
python/mtgenv_gym/evalkit/: README.md  __init__.py  __main__.py  analyzers.py  arena.py  hooks.py  ladder.py  metrics.py  policy.py  ratings.py  replay.py  sb3.py  scripted.py  tb_logging.py
python/mtgenv_gym/evalkit/dashboard/: debug.html  index.html
python/tests/: conftest.py  equivalence_fingerprints.json  test_attn_gather.py  test_attn_policy.py  test_attn_v3.py  test_attn_v3_realobs.py  test_batched_selfplay.py  test_cardid.py  test_dmc.py  test_elo_opponents.py  test_equivalence.py  test_eval_seed_rotation.py  test_evalkit.py  test_fork.py  test_launch_guard.py  test_learning.py  test_rate_agent.py  test_ratings.py  test_ratings_versioning.py  test_replay.py  test_script_pool.py  test_scripted.py  test_scripted_heuristic.py  test_selfplay.py  test_smoke.py  test_swine_analyzer.py  test_tracked_stats.py
(+430 files in other folders)
