[workspace]
resolver = "2"
members = ["crates/mtg-core", "crates/mtg-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"

# Shared dependency versions. `mtg-core` stays headless (no GUI/python/IO deps).
# A GUI viewer and PyO3 bindings live in their own crates added later.
[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
