[workspace]
resolver = "2"
members = ["crates/mtg-core", "crates/mtg-cli", "crates/mtg-gre-server"]

[workspace.package]
version = "0.1.0"
edition = "2021"

# Shared dependency versions. `mtg-core` stays headless (no GUI/python/IO deps).
# A GUI viewer and PyO3 bindings live in their own crates added later.
[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

# Test deps. `expect-test` = inline snapshot ("expect") tests, the Rust analog of Jane
# Street's ppx_expect; regenerate snapshots with `UPDATE_EXPECT=1 cargo test`.
expect-test = "1.5"
