[workspace]
resolver = "2"
members = ["crates/mtg-core", "crates/mtg-cli", "crates/mtg-gre-server", "crates/mtg-py"]

[workspace.package]
version = "0.1.0"
edition = "2021"

# Shared dependency versions. `mtg-core` stays headless (no GUI/python/IO deps).
# A GUI viewer and PyO3 bindings live in their own crates added later.
[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
# Stackful coroutines — the substrate for the resumable step API (RESUMABLE_ENGINE.md M3). Pure
# Rust, no IO/GUI/Python, so it's compatible with mtg-core's headless constraint.
corosensei = "=0.2.2"

# Test deps. `expect-test` = inline snapshot ("expect") tests, the Rust analog of Jane
# Street's ppx_expect; regenerate snapshots with `UPDATE_EXPECT=1 cargo test`.
expect-test = "1.5"
