[package]
name = "mtg-core"
version.workspace = true
edition.workspace = true
description = "Headless Magic: The Gathering rules engine (whiteboard model)."

[dependencies]
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
# Used only by tests to exercise the §1.1 serde contract on the boundary types.
serde_json = "1.0"
