# M3.0 SPIKE — throwaway. Proves the stackful-coroutine substrate for the resumable engine
# (docs/design/RESUMABLE_ENGINE.md). Deleted once M3.0 is signed off. Not a workspace library.
[package]
name = "mtg-coro-spike"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
mtg-core = { path = "../mtg-core" }
# Pinned. corosensei = maintained stackful-coroutine crate (used by wasmtime for stack switching).
corosensei = "=0.2.2"

[dev-dependencies]
